# neurarust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Goals.md  LICENSE  Objectifs.md  README.md  ROADMAP.md  STRUCTURE.md  result_cuda_nowarn.txt  result_cuda_refacto.txt  result_cudatest.txt  result_cudatest2.txt
examples/: basic_mlp_cpu.rs  basic_mlp_cpu_inplace_optim.rs  basic_mlp_cpu_manual_inplace.rs
neurarust-backend-cuda/: Cargo.toml
neurarust-backend-cuda/src/: alloc.rs  context.rs  error.rs  event.rs  lib.rs  stream.rs
neurarust-backend-cuda/src/tests/: alloc_test.rs  context_test.rs  event_test.rs  mod.rs  stream_test.rs
neurarust-core/: Cargo.toml
neurarust-core/examples/: advanced_training_techniques.rs  basic_mlp_cpu_inplace_optim.rs  basic_mlp_cpu_param_groups.rs  dtype_operations_example.rs
neurarust-core/src/: buffer.rs  creation.rs  device.rs  error.rs  indexing.rs  lib.rs  tensor.rs  tensor_data.rs  test_utils.rs  types.rs
neurarust-core/src/autograd/: backward_op.rs  grad_check.rs  graph.rs  mod.rs
neurarust-core/src/model/: mod.rs  sequential.rs
neurarust-core/src/nn/: init.rs  init_test.rs  mod.rs  module.rs  parameter.rs  parameter_test.rs
neurarust-core/src/nn/layers/: linear.rs  linear_test.rs  mod.rs  relu.rs
neurarust-core/src/nn/losses/: mod.rs  mse.rs  mse_test.rs
neurarust-core/src/ops/: arithmetic.rs  indexing.rs  linalg.rs  math_elem.rs  mod.rs  reshape.rs  stack.rs  traits.rs  view_ops.rs
neurarust-core/src/ops/activation/: mod.rs  relu.rs  relu_test.rs
neurarust-core/src/ops/arithmetic/: add.rs  add_test.rs  div.rs  div_test.rs  max_elemwise.rs  mod.rs  mul.rs  mul_test.rs  neg.rs  neg_test.rs  pow.rs  pow_test.rs  sub.rs  sub_test.rs
neurarust-core/src/ops/comparison/: equal.rs  equal_test.rs  ge.rs  gt.rs  gt_test.rs  le.rs  le_test.rs  logical_and.rs  logical_not.rs  logical_or.rs  logical_xor.rs  lt.rs  lt_test.rs  mod.rs  ne.rs  ne_test.rs  where_op.rs  where_op_test.rs
neurarust-core/src/ops/dtype/: cast.rs  cast_test.rs  mod.rs
neurarust-core/src/ops/linalg/: matmul.rs  matmul_test.rs  mod.rs  transpose.rs
neurarust-core/src/ops/loss/: mod.rs
neurarust-core/src/ops/math_elem/: ln.rs  ln_test.rs  mod.rs  sqrt.rs
neurarust-core/src/ops/reduction/: all.rs  all_test.rs  any.rs  any_test.rs  bincount.rs  bincount_test.rs  max.rs  max_test.rs  mean.rs  mean_test.rs  mod.rs  sum.rs  sum_test.rs  utils.rs
neurarust-core/src/ops/traits/: numeric.rs
neurarust-core/src/ops/view/: contiguous.rs  expand.rs  expand_test.rs  index_select.rs  masked_fill.rs  masked_select.rs  mod.rs  permute.rs  permute_test.rs  reshape.rs  reshape_test.rs  slice.rs  slice_test.rs  squeeze_unsqueeze.rs  transpose.rs  transpose_test.rs  utils.rs
neurarust-core/src/optim/: adagrad.rs  adagrad_test.rs  adam.rs  adam_test.rs  grad_clipping.rs  grad_clipping_test.rs  lr_scheduler.rs  lr_scheduler_tests.rs  mod.rs  optimizer.rs  optimizer_state.rs  optimizer_trait.rs  param_group.rs  rmsprop.rs  rmsprop_test.rs  sgd.rs  sgd_test.rs
neurarust-core/src/tensor/: accessors.rs  autograd.rs  autograd_methods.rs  autograd_methods_test.rs  broadcast_utils.rs  create.rs  create_test.rs  debug.rs  inplace_arithmetic_methods.rs  inplace_arithmetic_methods_test.rs  iter_utils.rs  mod.rs  reduction_methods.rs  tests.rs  traits.rs  utils.rs  utils_test.rs  view_methods.rs  view_methods_test.rs
neurarust-core/src/tensor/inplace_ops/: add.rs  add_scalar.rs  clamp.rs  div.rs  div_scalar.rs  fill.rs  mod.rs  mul.rs  mul_scalar.rs  pow.rs  sub.rs  sub_scalar.rs
neurarust-core/src/tensor/inplace_ops_tests/: add_scalar_test.rs  add_test.rs  clamp_test.rs  div_scalar_test.rs  div_test.rs  fill_test.rs  mod.rs  mul_scalar_test.rs  mul_test.rs  pow_test.rs  sub_scalar_test.rs  sub_test.rs
neurarust-core/src/utils/: testing.rs
neurarust-core/tests/: common.rs  tensor_basic_ops.rs  tensor_creation.rs  tensor_utils.rs  tensor_view_ops.rs
neurarust-data/: Cargo.toml
neurarust-data/examples/: data_loading_example.rs
neurarust-data/src/: dataloader.rs  dataloader_test.rs  dataset.rs  lib.rs  sampler.rs  tensor_dataset.rs  vec_dataset.rs
neurarust-data/src/datasets/: mod.rs  tensor_dataset.rs  tensor_dataset_test.rs  traits.rs  vec_dataset.rs  vec_dataset_test.rs
neurarust-data/src/samplers/: mod.rs  random_sampler.rs  random_sampler_test.rs  sequential_sampler.rs  sequential_sampler_test.rs  subset_random_sampler.rs  (+2 more)
neurarust-optim/: Cargo.toml
neurarust-optim/src/: adam.rs  lib.rs  sgd.rs
