[package]
name = "neurarust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
num-traits = "0.2"
# Add approx for float comparisons in tests (and grad check)
approx = "0.5" # <-- AJOUTER CETTE LIGNE

# Optional: Add ndarray for potential BLAS backend or more complex ops later
# ndarray = { version = "0.15", features = ["blas"] }
# blas-src = { version = "0.8", features = ["openblas"] }
# openblas-src = { version = "0.10", features = ["cblas"] }

[dev-dependencies]
# Keep approx here too if tests directly use it
# approx = "0.5"