[package]
name = "neurarust-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core tensor library for NeuraRust"

[dependencies]
thiserror = "1.0"
log = "0.4"
num-traits = "0.2"
# Add approx for float comparisons in tests (and grad check)
approx = "0.5"
rand = "0.8" # For random tensor creation
rand_distr = "0.4" # For specific random distributions (randn)

# Optional: Add ndarray for potential BLAS backend or more complex ops later
# ndarray = { version = "0.15", features = ["blas"] }
# blas-src = { version = "0.8", features = ["openblas"] }
# openblas-src = { version = "0.10", features = ["cblas"] }

[dev-dependencies]
# Keep approx here too if tests directly use it
# approx = "0.5"

[features]
default = []
gpu = [] # Déclare la fonctionnalité 'gpu'

[[example]]
name = "basic_mlp_cpu"
path = "./examples/basic_mlp_cpu.rs"
required-features = [] # Ensure it can be run without special features for now

[[example]]
name = "basic_mlp_cpu_inplace_optim"
path = "./examples/basic_mlp_cpu_inplace_optim.rs"
required-features = []

[[example]]
name = "basic_mlp_cpu_param_groups"
path = "./examples/basic_mlp_cpu_param_groups.rs"

[[example]]
name = "basic_mlp_cpu_manual_inplace"
path = "./examples/basic_mlp_cpu_manual_inplace.rs"
required-features = []

# Potential future examples for neurarust-core (if they primarily use core features)
# Note: Paths would be relative to neurarust-core, so e.g., "../../examples/new_core_example.rs"
# [[example]]
# name = "new_core_example"
# path = "./examples/new_core_example.rs"